# onnxruntime-genai

./: .gitignore
examples/phi2/: README.md
examples/phi2/c/: CMakeLists.txt  phi.c
src/python/: CMakeLists.txt  pypi_readme.md  setup.py.in
